load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//toolchain/runtimes:cc_runtime_tool_binary.bzl", "cc_runtime_tool_binary")

package(default_visibility = ["//visibility:public"])

exports_files(["version_script.bzl"])

cc_runtime_tool_binary(
    name = "libstdcxx-symbols-assembler",
    srcs = ["libstdcxx_symbols_assembler.c"],
)

sh_test(
    name = "libstdcxx_symbols_assembler_test",
    srcs = ["libstdcxx_symbols_assembler_test.sh"],
    data = [
        "libstdcxx_symbols_assembler_testdata/append.golden",
        "libstdcxx_symbols_assembler_testdata/base.ver",
        "libstdcxx_symbols_assembler_testdata/insert.golden",
        "libstdcxx_symbols_assembler_testdata/port_append.ver",
        "libstdcxx_symbols_assembler_testdata/port_insert.ver",
        ":libstdcxx-symbols-assembler",
    ],
    env = {
        "APPEND_GOLDEN": "$(rootpath libstdcxx_symbols_assembler_testdata/append.golden)",
        "ASSEMBLER": "$(rootpath :libstdcxx-symbols-assembler)",
        "BASE": "$(rootpath libstdcxx_symbols_assembler_testdata/base.ver)",
        "INSERT_GOLDEN": "$(rootpath libstdcxx_symbols_assembler_testdata/insert.golden)",
        "PORT_APPEND": "$(rootpath libstdcxx_symbols_assembler_testdata/port_append.ver)",
        "PORT_INSERT": "$(rootpath libstdcxx_symbols_assembler_testdata/port_insert.ver)",
    },
)

bzl_library(
    name = "version_script",
    srcs = ["version_script.bzl"],
    deps = [
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)
