load("@bazel_lib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(["libstdcxx_symbols_version_script.bzl"])

bzl_library(
    name = "libstdcxx_symbols_version_script",
    srcs = ["libstdcxx_symbols_version_script.bzl"],
    deps = [
        "@rules_cc//cc:action_names_bzl",
        "@rules_cc//cc:find_cc_toolchain_bzl",
        "@rules_cc//cc/common",
    ],
)
