load("@rules_cc//cc/toolchains:args.bzl", "cc_args")
load("@rules_cc//cc/toolchains:feature_constraint.bzl", "cc_feature_constraint")
load("@rules_cc//cc/toolchains/impl:documented_api.bzl", "cc_args_list")

package(default_visibility = ["//visibility:public"])

_GNU_SPLIT_PTHREAD_DL_LINK_ARGS = [
    "-Wl,--push-state",
    "-Wl,--as-needed",
    "-lpthread",
    "-ldl",
    "-Wl,--pop-state",
]

# Extracted from rules_cc unix_cc_configure.bzl
# TODO(cerisier): Extract those into proper semantic args list.
cc_args(
    name = "default_link_flags",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
    ],
    args = [
        "-Wl,-no-as-needed",
        "-Wl,-z,relro,-z,now",
    ],
)

cc_args(
    name = "kernel_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:source_compile_actions",
    ],
    allowlist_include_directories = [
        "@kernel_headers//:kernel_headers_directory",
    ],
    args = [
        "-isystem",
        "{kernel_headers_include_search_path}",
    ],
    data = [
        "@kernel_headers//:kernel_headers_directory",
    ],
    format = {
        "kernel_headers_include_search_path": "@kernel_headers//:kernel_headers_directory",
    },
    target_compatible_with = ["@platforms//os:linux"],
)

cc_args(
    name = "glibc_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:source_compile_actions",
    ],
    allowlist_include_directories = [
        "//runtimes/glibc:glibc_headers_include_search_directory",
    ],
    args = [
        # "__GLIBC_MINOR__={d}", version.minor
        "-isystem",
        "{libc_headers_include_search_path}",
    ],
    data = [
        "//runtimes/glibc:glibc_headers_include_search_directory",
    ],
    format = {
        "libc_headers_include_search_path": "//runtimes/glibc:glibc_headers_include_search_directory",
    },
    target_compatible_with = ["@platforms//os:linux"],
)

cc_args(
    name = "sanitizer_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:source_compile_actions",
    ],
    allowlist_include_directories = [
        "//sanitizers:sanitizers_headers_include_search_directory",
    ],
    # Make sure these sanitizer paths come after any user supplied paths, which
    # might also include another version of llvm's sanitizer headers.
    args = [
        "-Xclang",
        "-internal-isystem",
        "-Xclang",
        "{sanitizer_headers_include_search_paths}",
    ],
    data = [
        "//sanitizers:sanitizers_headers_include_search_directory",
    ],
    format = {
        "sanitizer_headers_include_search_paths": "//sanitizers:sanitizers_headers_include_search_directory",
    },
)

cc_args(
    name = "default_libs_gnu",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
    ],
    args = [
        # Expose the hermetic libc directory to the driver and to user-supplied
        # linkopts like -lc or -ldl.
        "-L{libc_library_search_path}",
    ] + select({
        # Before glibc 2.34, libpthread and libdl are separate libraries. The
        # Clang driver only adds -lc, but our GNU libc++/libunwind runtimes can
        # leave pthread/dl references for the final link.
        "//constraints/libc:gnu.2.28": _GNU_SPLIT_PTHREAD_DL_LINK_ARGS,
        "//constraints/libc:gnu.2.29": _GNU_SPLIT_PTHREAD_DL_LINK_ARGS,
        "//constraints/libc:gnu.2.30": _GNU_SPLIT_PTHREAD_DL_LINK_ARGS,
        "//constraints/libc:gnu.2.31": _GNU_SPLIT_PTHREAD_DL_LINK_ARGS,
        "//constraints/libc:gnu.2.32": _GNU_SPLIT_PTHREAD_DL_LINK_ARGS,
        "//constraints/libc:gnu.2.33": _GNU_SPLIT_PTHREAD_DL_LINK_ARGS,
        # Custom Linux platforms without an explicit libc constraint are routed
        # to GNU. Treat them as pre-2.34 to keep old-glibc runtimes linkable.
        "//constraints/libc:unconstrained": _GNU_SPLIT_PTHREAD_DL_LINK_ARGS,
        "//conditions:default": [],
    }),
    data = [
        "//runtimes/glibc:glibc_library_search_directory",
    ],
    format = {
        "libc_library_search_path": "//runtimes/glibc:glibc_library_search_directory",
    },
)

###

cc_feature_constraint(
    name = "static_libc_link_enabled",
    all_of = ["//toolchain/features:static_linking_mode"],
)

cc_feature_constraint(
    name = "dynamic_libc_link_enabled",
    all_of = ["//toolchain/features:dynamic_linking_mode"],
)

cc_args(
    name = "musl_libc_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:source_compile_actions",
    ],
    args = [
        "-isystem",
        "{libc_headers_include_search_path}",
    ],
    data = [
        "//runtimes/musl:musl_headers_include_search_directory",
    ],
    format = {
        "libc_headers_include_search_path": "//runtimes/musl:musl_headers_include_search_directory",
    },
)

#TODO: Factorize this and gnu
cc_args(
    name = "default_libs_musl_static",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_executable_actions",
    ],
    args = [
        # Expose the hermetic libc directory to the driver and to user-supplied
        # linkopts like -lc or -ldl.
        "-L{libc_library_search_path}",
    ],
    data = [
        "//runtimes/musl:musl_static_library_search_directory",
    ],
    format = {
        "libc_library_search_path": "//runtimes/musl:musl_static_library_search_directory",
    },
    requires_any_of = [":static_libc_link_enabled"],
    target_compatible_with = ["@platforms//os:linux"],
)

#TODO: Factorize this and gnu
cc_args(
    name = "default_libs_musl_dynamic_executable",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_executable_actions",
    ],
    args = [
        # Expose the hermetic libc directory to the driver and to user-supplied
        # linkopts like -lc or -ldl.
        "-L{libc_library_search_path}",
    ],
    data = [
        "//runtimes/musl:musl_dynamic_library_search_directory",
    ],
    format = {
        "libc_library_search_path": "//runtimes/musl:musl_dynamic_library_search_directory",
    },
    requires_any_of = [":dynamic_libc_link_enabled"],
    target_compatible_with = ["@platforms//os:linux"],
)

cc_args(
    name = "default_libs_musl_dynamic_library",
    actions = [
        "@rules_cc//cc/toolchains/actions:dynamic_library_link_actions",
    ],
    args = [
        # Expose the hermetic libc directory to the driver and to user-supplied
        # linkopts like -lc or -ldl.
        "-L{libc_library_search_path}",
    ],
    data = [
        "//runtimes/musl:musl_dynamic_library_search_directory",
    ],
    format = {
        "libc_library_search_path": "//runtimes/musl:musl_dynamic_library_search_directory",
    },
    target_compatible_with = ["@platforms//os:linux"],
)

cc_args_list(
    name = "default_libs_musl",
    args = [
        ":default_libs_musl_static",
        ":default_libs_musl_dynamic_executable",
        ":default_libs_musl_dynamic_library",
    ],
    target_compatible_with = ["@platforms//os:linux"],
)

alias(
    name = "default_libs",
    actual = select({
        "//platforms/config:musl": ":default_libs_musl",
        "//platforms/config:gnu": ":default_libs_gnu",
    }),
    target_compatible_with = ["@platforms//os:linux"],
)
