load("@rules_cc//cc/toolchains:args.bzl", "cc_args")

package(default_visibility = ["//visibility:public"])

cc_args(
    name = "mingw_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:compile_actions",
    ],
    allowlist_include_directories = [
        "@mingw//:mingw_generated_headers_crt_directory",
        "@mingw//:mingw_w64_headers_include_directory",
        "@mingw//:mingw_w64_headers_crt_directory",
        "@mingw//:mingw_w64_winpthreads_include_directory",
    ],
    args = [
        "-isystem",
        "{mingw_w64_winpthreads_include}",
        "-isystem",
        "{mingw_generated_headers_crt}",
        "-isystem",
        "{mingw_w64_headers_include}",
        "-isystem",
        "{mingw_w64_headers_crt}",
    ],
    data = [
        "@mingw//:mingw_generated_headers_crt_directory",
        "@mingw//:mingw_w64_headers_crt_directory",
        "@mingw//:mingw_w64_headers_include_directory",
        "@mingw//:mingw_w64_winpthreads_include_directory",
    ],
    format = {
        "mingw_generated_headers_crt": "@mingw//:mingw_generated_headers_crt_directory",
        "mingw_w64_headers_include": "@mingw//:mingw_w64_headers_include_directory",
        "mingw_w64_headers_crt": "@mingw//:mingw_w64_headers_crt_directory",
        "mingw_w64_winpthreads_include": "@mingw//:mingw_w64_winpthreads_include_directory",
    },
)

cc_args(
    name = "default_libs_gnu",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
    ],
    args = [
        "-L{mingw_import_library_search_path}",
        "-L{mingw_crt_library_search_path}",

        # Clang will respect the user's chosen CRT variant.
    ] + select({
        "//constraints/windows/crt:msvcrt": [
            # msvcrt.dll plus compatibility objects provided by mingw-w64.
            "-lmsvcrt_common",
            "-lmsvcrt_extra",
            "-lmsvcrt",
        ],
        "//constraints/windows/crt:ucrt": [
            "-lucrt",
        ],
    }),
    data = [
        "//runtimes/mingw:mingw_crt_library_search_directory",
        "//runtimes/mingw:mingw_import_libraries_directory",
    ],
    format = {
        "mingw_crt_library_search_path": "//runtimes/mingw:mingw_crt_library_search_directory",
        "mingw_import_library_search_path": "//runtimes/mingw:mingw_import_libraries_directory",
    },
)

cc_args(
    name = "msvc_headers_include_search_paths",
    actions = [
        "@rules_cc//cc/toolchains/actions:source_compile_actions",
    ],
    allowlist_include_directories = [
        "@msvc_runtime//:msvc_include",
        "@windows_sdk//:winsdk_ucrt_include",
        "@windows_sdk//:winsdk_shared_include",
        "@windows_sdk//:winsdk_um_include",
        "@windows_sdk//:winsdk_winrt_include",
    ],
    args = [
        # using `/imsvc` instead of `/clang:-I` here otherwise we're getting linking issues like:
        # lld-link: error: undefined symbol: neon_sriiq8
        # >>> referenced by libzstd-143054927.lib(zstd_lazy.o):(ZSTD_RowFindBestMatch_noDict_4_4)
        # >>> referenced by libzstd-143054927.lib(zstd_lazy.o):(ZSTD_RowFindBestMatch_noDict_4_4)
        # >>> referenced by libzstd-143054927.lib(zstd_lazy.o):(ZSTD_RowFindBestMatch_noDict_4_4)
        # >>> referenced 285 more times
        "/imsvc{msvc_include}",
        "/imsvc{winsdk_ucrt_include}",
        "/imsvc{winsdk_shared_include}",
        "/imsvc{winsdk_um_include}",
        "/imsvc{winsdk_winrt_include}",
    ],
    data = [
        "@msvc_runtime//:msvc_include",
        "@windows_sdk//:winsdk_shared_include",
        "@windows_sdk//:winsdk_ucrt_include",
        "@windows_sdk//:winsdk_um_include",
        "@windows_sdk//:winsdk_winrt_include",
    ],
    format = {
        "msvc_include": "@msvc_runtime//:msvc_include",
        "winsdk_ucrt_include": "@windows_sdk//:winsdk_ucrt_include",
        "winsdk_shared_include": "@windows_sdk//:winsdk_shared_include",
        "winsdk_um_include": "@windows_sdk//:winsdk_um_include",
        "winsdk_winrt_include": "@windows_sdk//:winsdk_winrt_include",
    },
)

cc_args(
    name = "default_libs_msvc",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
    ],
    args = [
        "/LIBPATH:{msvc_lib}",
        "/LIBPATH:{winsdk_ucrt_lib}",
        "/LIBPATH:{winsdk_um_lib}",
    ],
    data = [
        "@msvc_runtime//:msvc_lib",
        "@windows_sdk//:winsdk_ucrt_lib",
        "@windows_sdk//:winsdk_um_lib",
    ],
    format = {
        "msvc_lib": "@msvc_runtime//:msvc_lib",
        "winsdk_ucrt_lib": "@windows_sdk//:winsdk_ucrt_lib",
        "winsdk_um_lib": "@windows_sdk//:winsdk_um_lib",
    },
)

alias(
    name = "default_libs",
    actual = select({
        "@llvm//constraints/windows/abi:gnu": ":default_libs_gnu",
        "@llvm//constraints/windows/abi:gnullvm": ":default_libs_gnu",
        "@llvm//constraints/windows/abi:msvc": ":default_libs_msvc",
        "@llvm//constraints/windows/abi:unconstrained": ":default_libs_gnu",
    }),
)
